--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <h3 class="banner-subtitle">Scaling Metric Depth Pretraining with Noisy
                     Heterogeneous Sources</h3>
                 <div class="authors">
-                    <a href="https://mabaorui.github.io/" target="_blank" >Baorui Ma<sup>*</sup></a>,
+                    <a href="https://mabaorui.github.io/" target="_blank" >Baorui Ma<sup>*&sect;</sup></a>,
                     <a href="" target="_blank">Jiahui Yang<sup>*</sup></a>,
                     <a href="https://scholar.google.com/citations?user=L8tcNioAAAAJ&hl=en" target="_blank">Donglin Di<sup>&dagger;</sup></a>,
                     <a href="https://scholar.google.com/citations?user=gGAoxSAAAAAJ&hl=en" target="_blank">Xuancheng Zhang<sup></sup></a>,
@@ -80,7 +80,7 @@
                     <a href="" target="_blank">Xie Yan</a>,
                     <a href="" target="_blank">Wei Chen</a>,
                     <br><br>
-                    &dagger;Proejct Lead, *Equal Contribution
+                    &dagger;Proejct Lead, *Equal Contribution, &sect;Corresponding Author
                 </div>
 
                 <div class="banner-links">
