--- a/index.html
+++ b/index.html
@@ -264,13 +264,11 @@
 
                             </div> <!-- End .carousel-content -->
 
-                            <!-- 右按钮 -->
                             <button class="carousel-btn next-btn" onclick="changeAnalysis(1)">
                                 <i class="fas fa-chevron-right"></i>
                             </button>
                         </div>
 
-                        <!-- 底部指示器 (增加了第4个点) -->
                         <!-- <div class="carousel-indicators">
                             <span class="indicator active" onclick="setAnalysis(0)"></span>
                             <span class="indicator" onclick="setAnalysis(1)"></span>
@@ -278,7 +276,6 @@
                             <span class="indicator" onclick="setAnalysis(3)"></span>
                         </div> -->
                     </div> 
-                    <!-- 轮播组件结束 -->
                 </div>
 
                 <!-- Result Item 3: Robustness (Rainy/Night) -->
@@ -485,7 +482,7 @@
             <div class="citation-box">
                 <pre><code>
 @article{metricanything2026,
-    title={Metric Anything: Scaling Depth Pretraining with Noisy Heterogeneous Sources},
+    title={Metric Anything: Scaling Metric Depth Pretraining with Noisy Heterogeneous Sources},
     author={Metric Anything Team},
     journal={arXiv preprint},
     year={2026}
