--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             <div class="hero-body">
                               <video id="teaser" 
                                 class="main-video lazy-video" 
-                                controls playsinline height="40%">
+                                controls playsinline muted loop autoplay height="40%">
 
                                 <source src="./assets/video/ready/1-teaser.mp4" type="video/mp4">
                               </video>
@@ -183,8 +183,8 @@
                             <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
                         </p>
                     </div>
-                    <div class="result-video-small">
-                        <video style="width: 100%; height: auto; display: block;" playsinline muted loop controls class="app-video lazy-video" preload="metadata" data-src="assets/video/ready/4-ad.mp4">
+                    <div class="result-video-small result-video-compact">
+                        <video  style="width: 100%; height: auto; display: block;" playsinline muted loop autoplay controls class="app-video lazy-video" preload="metadata" data-src="assets/video/ready/4-ad.mp4">
                             <source data-src="assets/video/ready/4-ad.mp4" type="video/mp4">
                             Your browser does not support video playback.
                         </video>
