--- a/index.html
+++ b/index.html
@@ -264,9 +264,9 @@
                 <div class="result-item">
                     <div class="result-info">
                         <h3>Video Demo on Real-world Application in a Zero-shot Setting</h3>
-                        <p>
+                        <!-- <p> -->
                             <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
-                        </p>
+                        <!-- </p> -->
                     </div>
                     <div class="result-video-small result-video-compact">
                         <video  style="width: 100%; height: auto; display: block;" playsinline muted loop autoplay controls class="app-video lazy-video" preload="metadata" data-src="assets/video/ready/4-ad.mp4">
@@ -280,11 +280,11 @@
                 <div class="result-item">
                     <div class="result-info">
                         <h3>Blind spot completion test for left and right views uncovered by LiDAR</h3>
-                        <p>
+                        <!-- <p> -->
                             <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
                             
-                            <br><span style="color:#888; font-size: 0.9em;">(Drag the slider to compare)</span>
-                        </p>
+                            <!-- <br><span style="color:#888; font-size: 0.9em;">(Drag the slider to compare)</span> -->
+                        <!-- </p> -->
                     </div>
 
                     <!-- 轮播组件开始 -->
