--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
     <div class="section-divider"></div>
 
     <!-- Comparison -->
-    <section id="comparison" class="results-section">
+    <section id="comparison" class="comparison-section">
         <div class="container">
             <h2 class="section-title">Comparison</h2>
             <div class="results-list">
