--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                 <pre><code>
 @article{metricanything2026,
     title={MetricAnything: Scaling Metric Depth Pretraining with Noisy Heterogeneous Sources},
-    author={Metric Anything Team},
+    author={Baorui Ma, Jiahui Yang, Donglin Di, Xuancheng Zhang, Jianxun Cui, Hao Li, Xie Yan and Wei Chen},
     journal={arXiv preprint},
     year={2026}
 }</code></pre>
