--- a/index.html
+++ b/index.html
@@ -435,7 +435,8 @@
         </div> <!-- End .container -->
     </section>
 
-    
+    <!-- Section Divider -->
+    <div class="section-divider"></div>
 
     <!-- Comparison -->
     <section id="comparison" class="comparison-section">
