--- a/index.html
+++ b/index.html
@@ -463,6 +463,45 @@
                         <!-- <h4 class="image-title">Visualization of Depth SR and Completion.</h4> -->
                     </div>
                 </div>
+
+                <!-- New Comparison Item: Interactive Image Gallery -->
+                <div class="result-item">
+                    <div class="result-info">
+                        <h3>Interactive Comparison Gallery</h3>
+                        <p class="text-large">
+                            Click on any thumbnail below to view the corresponding comparison image.
+                        </p>
+                    </div>
+
+                    <!-- Main Display Area -->
+                    <div class="comparison-main-display">
+                        <div class="result-image-large" id="comparisonMainImage">
+                            <img src="./assets/metricanything/comp.png" alt="Comparison Image" id="comparisonMainImg" loading="lazy">
+                        </div>
+                    </div>
+
+                    <!-- Thumbnail Gallery -->
+                    <div class="comparison-thumbnail-gallery">
+                        <div class="thumbnail-item active" 
+                             data-img-src="./assets/metricanything/comp.png"
+                             onclick="switchComparisonImage(this)">
+                            <img src="./assets/metricanything/comp.png" alt="Comparison 1" onerror="this.src='assets/placeholder.svg'">
+                        </div>
+                        <div class="thumbnail-item" 
+                             data-img-src="./assets/metricanything/table.png"
+                             onclick="switchComparisonImage(this)">
+                            <img src="./assets/metricanything/table.png" alt="Comparison 2" onerror="this.src='assets/placeholder.svg'">
+                        </div>
+                        <!-- 你可以继续添加更多缩略图 -->
+                        <!-- 
+                        <div class="thumbnail-item" 
+                             data-img-src="./assets/metricanything/your-image-3.png"
+                             onclick="switchComparisonImage(this)">
+                            <img src="./assets/metricanything/your-image-3.png" alt="Comparison 3" onerror="this.src='assets/placeholder.svg'">
+                        </div>
+                        -->
+                    </div>
+                </div>
             </div>
         </div>
     </section>
