--- a/index.html
+++ b/index.html
@@ -276,91 +276,26 @@
                     </div>
                 </div>
 
-                <!-- Result Item 2: Blind spot completion (这里是你要修改的核心部分) -->
+                <!-- Result Item 2: Blind spot completion - Interactive Comparison Video -->
                 <div class="result-item">
                     <div class="result-info">
                         <h3>Blind spot completion test for left and right views uncovered by LiDAR</h3>
-                        <!-- <p> -->
-                            <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
-                            
-                            <!-- <br><span style="color:#888; font-size: 0.9em;">(Drag the slider to compare)</span> -->
-                        <!-- </p> -->
+                        <p>
+                            <span style="color:#888; font-size: 0.9em;">Drag the slider to compare left and right views</span>
+                        </p>
                     </div>
 
-                    <!-- 轮播组件开始 -->
-                    <div class="analysis-carousel">
-                        <div class="carousel-container">
-                            
-                            <!-- 左按钮 -->
-                            <button class="carousel-btn prev-btn" onclick="changeAnalysis(-1)">
-                                <i class="fas fa-chevron-left"></i>
-                            </button>
-
-                            <!-- 轮播内容区域 -->
-                            <div class="carousel-content">
-
-                                <!-- Slide 1 -->
-                                <!-- <div class="analysis-slide active">
-                                    <div style="position: relative;">
-                                        <video class="video" width="100%" id="comp_1" loop playsinline autoplay muted 
-                                            src="assets/video/ready/comparison-left-1.mp4" 
-                                            onplay="resizeAndPlay(this)" 
-                                            style="height: 0px; opacity: 0;">
-                                        </video>
-                                        <canvas height="0" class="videoMerge" id="comp_1Merge"></canvas>
-                                    </div>
-                                </div> -->
-
-                                <!-- Slide 2 -->
-                                <!-- <div class="analysis-slide">
-                                    <div style="position: relative;">
-                                        <video class="video" width="100%" id="comp_2" loop playsinline autoplay muted 
-                                            src="assets/video/ready/comparison-right-1.mp4" 
-                                            onplay="resizeAndPlay(this)" 
-                                            style="height: 0px; opacity: 0;">
-                                        </video>
-                                        <canvas height="0" class="videoMerge" id="comp_2Merge"></canvas>
-                                    </div>
-                                </div> -->
-
-                                <!-- Slide 3 -->
-                                <!-- <div class="analysis-slide">
-                                    <div style="position: relative;">
-                                        <video class="video" width="100%" id="comp_3" loop playsinline autoplay muted 
-                                            src="assets/video/ready/comparison-left-2.mp4" 
-                                            onplay="resizeAndPlay(this)" 
-                                            style="height: 0px; opacity: 0;">
-                                        </video>
-                                        <canvas height="0" class="videoMerge" id="comp_3Merge"></canvas>
-                                    </div>
-                                </div> -->
-
-                                <!-- Slide 4 -->
-                                <div class="analysis-slide">
-                                    <div style="position: relative;">
-                                        <video class="video" width="100%" id="comp_4" loop playsinline autoplay muted 
-                                            src="assets/video/ready/comparison-right-2.mp4" 
-                                            onplay="resizeAndPlay(this)" 
-                                            style="height: 0px; opacity: 0;">
-                                        </video>
-                                        <canvas height="0" class="videoMerge" id="comp_4Merge"></canvas>
-                                    </div>
-                                </div>
-
-                            </div> <!-- End .carousel-content -->
-
-                            <button class="carousel-btn next-btn" onclick="changeAnalysis(1)">
-                                <i class="fas fa-chevron-right"></i>
-                            </button>
+                    <!-- 交互式对比视频 -->
+                    <div class="result-video-small">
+                        <div style="position: relative;">
+                            <video class="video" width="100%" id="blindspot_comparison" loop playsinline autoplay muted 
+                                src="assets/video/ready/comparison-right-2.mp4" 
+                                onplay="resizeAndPlay(this)" 
+                                style="height: 0px; opacity: 0;">
+                            </video>
+                            <canvas height="0" class="videoMerge" id="blindspot_comparisonMerge"></canvas>
                         </div>
-
-                        <!-- <div class="carousel-indicators">
-                            <span class="indicator active" onclick="setAnalysis(0)"></span>
-                            <span class="indicator" onclick="setAnalysis(1)"></span>
-                            <span class="indicator" onclick="setAnalysis(2)"></span>
-                            <span class="indicator" onclick="setAnalysis(3)"></span>
-                        </div> -->
-                    </div> 
+                    </div>
                 </div>
 
                 <!-- Result Item 3: Robustness (Rainy/Night) -->
