--- a/index.html
+++ b/index.html
@@ -399,42 +399,16 @@
                     </div>
                 </div>
 
-                <!-- New Comparison Item: Interactive Image Gallery -->
+                <!-- Comparison Image -->
                 <div class="result-item">
                     <div class="result-info">
-                        <h3>Interactive Comparison Gallery</h3>
-                        <p class="text-large">
-                            Click on any thumbnail below to view the corresponding comparison image.
-                        </p>
+                        <h3>Qualitative Comparison of Point Maps</h3>
                     </div>
 
-                    <!-- Main Display Area -->
-                    <div class="comparison-main-display">
-                        <div class="result-image-large" id="comparisonMainImage">
-                            <img src="./assets/metricanything/comparison/comparison-1.png" alt="Comparison Image" id="comparisonMainImg" loading="lazy">
+                    <div class="image-with-title">
+                        <div class="result-image-large">
+                            <img src="./assets/metricanything/comparison/all.png" alt="Qualitative Comparison of Point Maps" loading="lazy">
                         </div>
-                    </div>
-
-                    <!-- Thumbnail Gallery -->
-                    <div class="comparison-thumbnail-gallery">
-                        <div class="thumbnail-item active" 
-                             data-img-src="./assets/metricanything/comparison/comparison-1.png"
-                             onclick="switchComparisonImage(this)">
-                            <img src="./assets/metricanything/comparison/rgb-1.png" alt="Comparison 1" onerror="this.src='assets/placeholder.svg'">
-                        </div>
-                        <div class="thumbnail-item" 
-                             data-img-src="./assets/metricanything/comparison/comparison-2.png"
-                             onclick="switchComparisonImage(this)">
-                            <img src="./assets/metricanything/comparison/rgb-2.png" alt="Comparison 2" onerror="this.src='assets/placeholder.svg'">
-                        </div>
-                        <!-- 你可以继续添加更多缩略图 -->
-                        <!-- 
-                        <div class="thumbnail-item" 
-                             data-img-src="./assets/metricanything/comparison/comparison-3.png"
-                             onclick="switchComparisonImage(this)">
-                            <img src="./assets/metricanything/comparison/rgb-3.png" alt="Comparison 3" onerror="this.src='assets/placeholder.svg'">
-                        </div>
-                        -->
                     </div>
                 </div>
             </div>
