--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <a href="./assets/MetricAnything.pdf" target="_blank" class="link-btn">
                         <i class="fas fa-file-pdf"></i> Tech Report
                     </a>
-                    <a href="" target="_blank" class="link-btn">
+                    <a href="https://arxiv.org/pdf/2601.22054" target="_blank" class="link-btn">
                         <i class="fas fa-graduation-cap"></i> arXiv
                     </a>
                     <a href="" target="_blank" class="link-btn">
