--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                     <a href="https://arxiv.org/pdf/2601.22054" target="_blank" class="link-btn">
                         <i class="fas fa-graduation-cap"></i> arXiv
                     </a>
-                    <a href="" target="_blank" class="link-btn">
-                        <i class="fas fa-rocket"></i> Demo (Coming Soon)
+                    <a href="https://huggingface.co/spaces/yjh001/metricanything-student-pointmap" target="_blank" class="link-btn">
+                        <i class="fas fa-rocket"></i> Demo (Student PointMap)
                     </a>
                     <a href="https://github.com/metric-anything/metric-anything" target="_blank" class="link-btn">
                         <i class="fab fa-github"></i> Code
