--- a/index.html
+++ b/index.html
@@ -431,6 +431,41 @@
                     </div>
                 </div>
 
+                <!-- Result Item: Prompt-free monocular depth estimation -->
+                <div class="result-item">
+                    <div class="result-info">
+                        <h3>Prompt-free Monocular Metric Depth Estimation</h3>
+                    </div>
+
+                    <div class="result-info">
+                        <p class="text-large">
+                            Monocular depth estimation performance of our Student-DepthMap against prior methods.
+                        </p>
+                    </div>
+                    <div class="image-with-title">
+                        <div class="result-image-large">
+                            <img src="./assets/metricanything/comparison/stu_depthmap_table.png" alt="Depth map table" loading="lazy">
+                        </div>
+                    </div>
+                    <div class="image-with-title">
+                        <div class="result-image-large">
+                            <img src="./assets/metricanything/comparison/stu_depthmap_com.png" alt="Depth map comparison" loading="lazy">
+                        </div>
+                    </div>
+
+                    <div class="result-info">
+                        <!-- <h3>Qualitative Comparison of Point Maps</h3> -->
+                        <p class="text-large">
+                            Monocular depth estimation performance of our Student-PointMap against prior methods.
+                        </p>
+                    </div>
+                    <div class="image-with-title">
+                        <div class="result-image-large">
+                            <img src="./assets/metricanything/comparison/all.png" alt="Qualitative Comparison of Point Maps" loading="lazy">
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Result Item 4: Spatial Understanding -->
                 <div class="result-item">
                     <div class="result-info">
@@ -499,19 +534,6 @@
                             <img src="./assets/metricanything/comp.png" alt="Robustness under rainy environment" loading="lazy">
                         </div>
                         <!-- <h4 class="image-title">Visualization of Depth SR and Completion.</h4> -->
-                    </div>
-                </div>
-
-                <!-- Comparison Image -->
-                <div class="result-item">
-                    <div class="result-info">
-                        <h3>Qualitative Comparison of Point Maps</h3>
-                    </div>
-
-                    <div class="image-with-title">
-                        <div class="result-image-large">
-                            <img src="./assets/metricanything/comparison/all.png" alt="Qualitative Comparison of Point Maps" loading="lazy">
-                        </div>
                     </div>
                 </div>
             </div>
