--- a/index.html
+++ b/index.html
@@ -431,17 +431,35 @@
                     </div>
                 </div>
 
+                <!-- Result Item: Prompt-based estimation -->
+                <div class="result-item">
+                    <div class="result-info">
+                        <h3>Prompt-based Monocular Metric Depth Estimation</h3>
+                        <p class="text-large">Zero-Shot Depth Super-Resolution and Completion</p>
+                    </div>
+
+                    <div class="image-with-title">
+                        <div class="result-image-large">
+                            <img src="./assets/metricanything/table.png" alt="Prompt-based table" loading="lazy">
+                        </div>
+                    </div>
+
+                    <div class="image-with-title">
+                        <div class="result-image-large">
+                            <img src="./assets/metricanything/comp.png" alt="Prompt-based comparison" loading="lazy">
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Result Item: Prompt-free monocular depth estimation -->
                 <div class="result-item">
                     <div class="result-info">
                         <h3>Prompt-free Monocular Metric Depth Estimation</h3>
-                    </div>
-
-                    <div class="result-info">
                         <p class="text-large">
                             Monocular depth estimation performance of our Student-DepthMap against prior methods.
                         </p>
                     </div>
+
                     <div class="image-with-title">
                         <div class="result-image-large">
                             <img src="./assets/metricanything/comparison/stu_depthmap_table.png" alt="Depth map table" loading="lazy">
@@ -458,6 +476,11 @@
                         <p class="text-large">
                             Monocular depth estimation performance of our Student-PointMap against prior methods.
                         </p>
+                    </div>
+                    <div class="image-with-title">
+                        <div class="result-image-large">
+                            <img src="./assets/metricanything/comparison/stu_pointmap_table.png" alt="Qualitative Comparison of Point Maps" loading="lazy">
+                        </div>
                     </div>
                     <div class="image-with-title">
                         <div class="result-image-large">
@@ -509,40 +532,6 @@
     </section>
 
     
-    <!-- Comparison -->
-    <section id="comparison" class="comparison-section">
-        <div class="container">
-            <h2 class="section-title">Comparison</h2>
-            <div class="results-list">
-                <!-- Robustness under Environmental Degradation -->
-                <div class="result-item">
-                    <div class="result-info">
-                        <h3>Zero-Shot Depth Super-Resolution and Completion</h3>
-                        <!-- <p class="text-large">
-                        </p> -->
-                    </div>
-
-                    <div class="image-with-title">
-                        <div class="result-image-large">
-                            <img src="./assets/metricanything/table.png" alt="Robustness under night environment" loading="lazy">
-                        </div>
-                        <!-- <h4 class="image-title">Robustness under <span class="highlight-night">night</span> environment</h4> -->
-                    </div>
-
-                    <div class="image-with-title">
-                        <div class="result-image-large">
-                            <img src="./assets/metricanything/comp.png" alt="Robustness under rainy environment" loading="lazy">
-                        </div>
-                        <!-- <h4 class="image-title">Visualization of Depth SR and Completion.</h4> -->
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-
-
     <!-- Abilities -->
 
 
