up student_depthmap

--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
                     <a href="https://arxiv.org/pdf/2601.22054" target="_blank" class="link-btn">
                         <i class="fas fa-graduation-cap"></i> arXiv
                     </a>
+                    <a href="https://huggingface.co/spaces/yjh001/metricanything_student_depthmap" target="_blank" class="link-btn">
+                        <i class="fas fa-rocket"></i> Demo (Student DepthMap)
+                    </a>
                     <a href="https://huggingface.co/spaces/yjh001/metricanything-student-pointmap" target="_blank" class="link-btn">
                         <i class="fas fa-rocket"></i> Demo (Student PointMap)
                     </a>
